<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="Real_ByteArray" Id="{17f5832c-7c89-4ff2-b3af-c31e8ea830be}">
    <Declaration><![CDATA[TYPE Real_ByteArray :
UNION
	Value : REAL;
	AValue:  ARRAY [0..3] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>