<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Set_Real_From_Buffer" Id="{536aba32-6d6e-4e30-9671-c2f285fb0c17}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Set_Real_From_Buffer : Buffer_Error
VAR_INPUT
	In : REAL;
	Num : USINT;
	Layout : REFERENCE TO Buffer_Layout;
END_VAR

VAR_IN_OUT
	Buffer : ARRAY [*] OF BYTE;
END_VAR

VAR
	Offset : USINT;
	BufferSize : DINT;
	U_Int : Real_ByteArray;
	i : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[BufferSize := UPPER_BOUND(Buffer, 1) - LOWER_BOUND(Buffer, 1); // berekent buffer size

IF BufferSize = Layout.Buffer_Size THEN
	Set_Real_From_Buffer := Buffer_Error.Layout_Not_Size_Buffer; // return error dat buffer size niet overeen komt met buffer layout
	RETURN;
END_IF

IF NOT Layout.Enabel_Real_Array THEN
	Set_Real_From_Buffer := Buffer_Error.Array_Not_Enabelt; // return error data array niet enabelt is
	RETURN;
END_IF

IF Num > Layout.Real_Amount THEN
	Set_Real_From_Buffer := Buffer_Error.Array_To_Small; // return error data de num niet in de type array past
	RETURN;
END_IF

Offset := Layout.Real_Array_Offset + (Num * 4);

IF Offset + 3 > BufferSize THEN
	Set_Real_From_Buffer := Buffer_Error.Wread_Error;
	RETURN;
ELSE
	U_Int.Value := In;
	FOR i:=0 TO 3 BY 1 DO
		Buffer[Offset + i] := U_Int.AValue[i];
	END_FOR
	Set_Real_From_Buffer := Buffer_Error.None;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Set_Real_From_Buffer">
      <LineId Id="13" Count="27" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>